<resources>
    <string name="app_name">EZPT</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_succeeded">"Login succeeded"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_succeeded">"Register succeeded"</string>
    <string name="register_failed">"Register failed. Try again."</string>
    <string name="app_title">"E Z P T"</string>
    <string name="profile_setting">"Profile Setting"</string>
    <string name="search_trainer">"Search Trainer"</string>
    <string name="search_trainee">"Search Trainee"</string>
    <string name="mypage">"My Page"</string>
    <string name="chat">"Chat"</string>
    <string name="logout">"Logout"</string>
</resources>