<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView

        android:id="@+id/appTitle"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/shrikhand"
        android:text="@string/app_title"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="50dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textWebEmailAddress" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edittext"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edittext"
        android:layout_marginTop="11dp">

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:onClick="signUp"
            android:text="@string/signup" />

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:onClick="signIn"
            android:text="@string/signin" />

    </LinearLayout>

</RelativeLayout>